--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,8 @@ lifecycle = "2.10.0"
 material3 = "1.4.0"
 appcompat = "1.7.1"
 media3 = "1.7.1"
+mediarouter = "1.7.0"
+castFramework = "22.0.0"
 room = "2.8.4"
 hilt = "2.57.1"
 ktor = "3.3.3"
@@ -78,6 +80,10 @@ palette = { module = "androidx.palette:palette-ktx", version.ref = "palette" }
 media3 = { module = "androidx.media3:media3-exoplayer", version.ref = "media3" }
 media3-okhttp = { module = "androidx.media3:media3-datasource-okhttp", version.ref = "media3" }
 media3-session = { module = "androidx.media3:media3-session", version.ref = "media3" }
+media3-cast = { module = "androidx.media3:media3-cast", version.ref = "media3" }
+
+mediarouter = { module = "androidx.mediarouter:mediarouter", version.ref = "mediarouter" }
+cast-framework = { module = "com.google.android.gms:play-services-cast-framework", version.ref = "castFramework" }
 
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
