feat: add Home screen widget, close #1869
This commit introduces a home screen widget for controlling music playback.

Key changes include:
- Adding `HelloWidget.kt` as the `AppWidgetProvider` to handle widget updates and user interactions.
- Creating the widget's layout (`widget_hello.xml`) and provider info (`widget_info.xml`).
- Integrating widget logic into `MusicService` to handle actions (play/pause, next, previous, like) and update the widget's UI with the current song title and album art.
- Implementing a safe method for loading and displaying album art in the widget using Coil 3, which converts hardware bitmaps to software bitmaps to prevent crashes.
- Updating the build script to allow reading API keys from `local.properties` for local development, in addition to environment variables for CI builds.

Introduces vector drawables for playback controls (play, pause, skip previous/next) and like/unlike actions (heart filled/outline).
Adds `widget_background.xml` shape resource.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -174,6 +174,17 @@
         <meta-data
             android:name="com.google.android.gms.car.application"
             android:resource="@xml/automotive_app_desc" />
+        <receiver
+            android:name=".widget.HelloWidget"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info" />
+        </receiver>
 
         <!-- Google Cast Options Provider -->
         <meta-data
