refactor(UI): redesign user interface across the app

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ json = "20250517"
 kotlin = "2.2.10"
 compose = "1.10.0"
 lifecycle = "2.10.0"
-material3 = "1.4.0"
+material3 = "1.5.0-alpha09"
 appcompat = "1.7.1"
 media3 = "1.7.1"
 mediarouter = "1.8.1"
