--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -36,7 +36,7 @@ junit = "4.13.2"
 timber = "5.0.1"
 materialKolor = "4.0.5"
 kuromojiIpadic = "0.9.0"
-extractor = "a194151"
+extractor = "main-SNAPSHOT"
 tinypinyin = "2.0.3"
 
 [libraries]
