feat: Add foss/gms build flavors for Google Cast support
Separates Google Cast into a gms build flavor so the default build (foss)
doesn't include any Google Play Services dependencies.

- foss flavor (default): No Cast functionality, F-Droid compatible
- gms flavor: Full Cast support with 'with Google Cast' APK naming

Changes:
- Added variant flavor dimension (foss/gms)
- Cast dependencies use gmsImplementation
- Foss stubs in app/src/foss/ for compilation
- GMS implementation in app/src/gms/
- PlayerSettings shows Cast toggle only in gms builds
- Workflows build both variants for releases

Closes #1115

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
     strategy:
       matrix:
         abi: [ 'arm64', 'armeabi', 'x86', 'x86_64', 'universal' ]
+        variant: [ 'foss', 'gms' ]
 
     steps:
       - uses: actions/checkout@v6
@@ -44,7 +45,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build Release APK and Run Lint
-        run: ./gradlew --no-configuration-cache --console=plain clean assemble${{ matrix.abi }}Release :app:lint${{ matrix.abi }}Release --warning-mode summary
+        run: ./gradlew --no-configuration-cache --console=plain clean assemble${{ matrix.abi }}${{ matrix.variant == 'foss' && 'Foss' || 'Gms' }}Release :app:lint${{ matrix.abi }}${{ matrix.variant == 'foss' && 'Foss' || 'Gms' }}Release --warning-mode summary
         env:
           PULL_REQUEST: 'false'
           GITHUB_EVENT_NAME: ${{ github.event_name }}
@@ -54,7 +55,7 @@ jobs:
       - name: Sign APK
         uses: ilharp/sign-android-release@v2.0.0
         with:
-          releaseDir: app/build/outputs/apk/${{ matrix.abi }}/release/
+          releaseDir: app/build/outputs/apk/${{ matrix.abi }}${{ matrix.variant == 'foss' && 'Foss' || 'Gms' }}/release/
           signingKey: ${{ secrets.KEYSTORE }}
           keyAlias: ${{ secrets.KEY_ALIAS }}
           keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
@@ -63,14 +64,20 @@ jobs:
 
       - name: Move signed APK
         run: |
-          mkdir -p app/build/outputs/apk/${{ matrix.abi }}/release/out
-          find app/build/outputs/apk/${{ matrix.abi }}/release/ -name "*-signed.apk" -o -name "*-unsigned-signed.apk" | xargs -I{} mv {} app/build/outputs/apk/${{ matrix.abi }}/release/out/app-${{ matrix.abi }}-release.apk
+          OUTPUT_DIR="app/build/outputs/apk/${{ matrix.abi }}${{ matrix.variant == 'foss' && 'Foss' || 'Gms' }}/release"
+          mkdir -p "$OUTPUT_DIR/out"
+          if [ "${{ matrix.variant }}" = "gms" ]; then
+            TARGET_NAME="app-${{ matrix.abi }}-with-Google-Cast.apk"
+          else
+            TARGET_NAME="app-${{ matrix.abi }}-release.apk"
+          fi
+          find "$OUTPUT_DIR" -name "*-signed.apk" -o -name "*-unsigned-signed.apk" | xargs -I{} mv {} "$OUTPUT_DIR/out/$TARGET_NAME"
   
       - name: Upload Signed APK
         uses: actions/upload-artifact@v6
         with:
-          name: app-${{ matrix.abi }}-release
-          path: app/build/outputs/apk/${{ matrix.abi }}/release/out/*
+          name: ${{ matrix.variant == 'gms' && format('app-{0}-with-Google-Cast', matrix.abi) || format('app-{0}-release', matrix.abi) }}
+          path: app/build/outputs/apk/${{ matrix.abi }}${{ matrix.variant == 'foss' && 'Foss' || 'Gms' }}/release/out/*
 
   build_debug:
     name: build (debug)
@@ -107,7 +114,7 @@ jobs:
           echo "${{ secrets.DEBUG_KEYSTORE }}" | base64 -d > ./app/persistent-debug.keystore
 
       - name: Build Debug APK and Run Lint
-        run: ./gradlew --no-configuration-cache --console=plain clean assembleUniversalDebug :app:lintUniversalDebug --warning-mode summary
+        run: ./gradlew --no-configuration-cache --console=plain clean assembleUniversalFossDebug :app:lintUniversalFossDebug --warning-mode summary
         env:
           PULL_REQUEST: 'false'
           GITHUB_EVENT_NAME: ${{ github.event_name }}
@@ -118,4 +125,4 @@ jobs:
         uses: actions/upload-artifact@v6
         with:
           name: app-universal-debug
-          path: app/build/outputs/apk/universal/debug/*.apk
+          path: app/build/outputs/apk/universalFoss/debug/*.apk
