--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,6 +75,7 @@ jobs:
     strategy:
       matrix:
         abi: [ 'arm64', 'armeabi', 'x86', 'x86_64', 'universal' ]
+        variant: [ 'foss', 'gms' ]
 
     steps:
       - uses: actions/checkout@v6
@@ -95,7 +96,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build and Lint Release APK
-        run: ./gradlew --no-configuration-cache --console=plain clean assemble${{ matrix.abi }}Release :app:lint${{ matrix.abi }}Release --warning-mode summary
+        run: ./gradlew --no-configuration-cache --console=plain clean assemble${{ matrix.abi }}${{ matrix.variant == 'foss' && 'Foss' || 'Gms' }}Release :app:lint${{ matrix.abi }}${{ matrix.variant == 'foss' && 'Foss' || 'Gms' }}Release --warning-mode summary
         env:
           PULL_REQUEST: 'false'
           GITHUB_EVENT_NAME: ${{ github.event_name }}
@@ -105,7 +106,7 @@ jobs:
       - name: Sign APK
         uses: ilharp/sign-android-release@v2.0.0
         with:
-          releaseDir: app/build/outputs/apk/${{ matrix.abi }}/release/
+          releaseDir: app/build/outputs/apk/${{ matrix.abi }}${{ matrix.variant == 'foss' && 'Foss' || 'Gms' }}/release/
           signingKey: ${{ secrets.KEYSTORE }}
           keyAlias: ${{ secrets.KEY_ALIAS }}
           keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
@@ -114,32 +115,44 @@ jobs:
 
       - name: Move and rename signed APKs
         run: |
-          mkdir -p app/build/outputs/apk/${{ matrix.abi }}/release/out
+          OUTPUT_DIR="app/build/outputs/apk/${{ matrix.abi }}${{ matrix.variant == 'foss' && 'Foss' || 'Gms' }}/release"
+          mkdir -p "$OUTPUT_DIR/out"
           
-          SIGNED_APK=$(find app/build/outputs/apk/${{ matrix.abi }}/release/ -name "*-signed.apk" -o -name "*-unsigned-signed.apk" | head -1)
+          SIGNED_APK=$(find "$OUTPUT_DIR" -name "*-signed.apk" -o -name "*-unsigned-signed.apk" | head -1)
           
           if [ -z "$SIGNED_APK" ]; then
-            echo "No signed APK found for ${{ matrix.abi }}"
-            ls -la app/build/outputs/apk/${{ matrix.abi }}/release/
+            echo "No signed APK found for ${{ matrix.abi }} ${{ matrix.variant }}"
+            ls -la "$OUTPUT_DIR"
             exit 1
           fi
           
-          if [ "${{ matrix.abi }}" = "universal" ]; then
-            TARGET_NAME="Metrolist.apk"
+          # Name based on abi and variant
+          if [ "${{ matrix.variant }}" = "gms" ]; then
+            # GMS builds get "with Google Cast" suffix
+            if [ "${{ matrix.abi }}" = "universal" ]; then
+              TARGET_NAME="Metrolist-with-Google-Cast.apk"
+            else
+              TARGET_NAME="app-${{ matrix.abi }}-with-Google-Cast.apk"
+            fi
           else
-            TARGET_NAME="app-${{ matrix.abi }}-release.apk"
+            # FOSS builds keep original names
+            if [ "${{ matrix.abi }}" = "universal" ]; then
+              TARGET_NAME="Metrolist.apk"
+            else
+              TARGET_NAME="app-${{ matrix.abi }}-release.apk"
+            fi
           fi
           
-          mv "$SIGNED_APK" "app/build/outputs/apk/${{ matrix.abi }}/release/out/$TARGET_NAME"
+          mv "$SIGNED_APK" "$OUTPUT_DIR/out/$TARGET_NAME"
           
           echo "APK renamed to: $TARGET_NAME"
-          ls -la app/build/outputs/apk/${{ matrix.abi }}/release/out/
+          ls -la "$OUTPUT_DIR/out/"
 
       - name: Upload Signed APKs
         uses: actions/upload-artifact@v6
         with:
-          name: ${{ matrix.abi == 'universal' && 'Metrolist' || format('app-{0}-release', matrix.abi) }}
-          path: app/build/outputs/apk/${{ matrix.abi }}/release/out/${{ matrix.abi == 'universal' && 'Metrolist.apk' || format('app-{0}-release.apk', matrix.abi) }}
+          name: ${{ matrix.variant == 'gms' && (matrix.abi == 'universal' && 'Metrolist-with-Google-Cast' || format('app-{0}-with-Google-Cast', matrix.abi)) || (matrix.abi == 'universal' && 'Metrolist' || format('app-{0}-release', matrix.abi)) }}
+          path: app/build/outputs/apk/${{ matrix.abi }}${{ matrix.variant == 'foss' && 'Foss' || 'Gms' }}/release/out/*.apk
 
   create-release:
     needs: [check-version, build]
