--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -126,3 +126,56 @@ jobs:
         with:
           name: app-universal-debug
           path: app/build/outputs/apk/universalFoss/debug/*.apk
+
+  build_clone:
+    name: Build Universal Clone
+    if: github.actor != 'dependabot[bot]' && github.actor != 'renovate[bot]'
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v6
+      
+      - name: Set up JDK 21
+        uses: actions/setup-java@v5
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Set Up Gradle
+        uses: gradle/actions/setup-gradle@v5
+        with:
+          cache-disabled: true
+          cache-cleanup: on-success
+          
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Build Clone APK (Stable/Release performance)
+        run: |
+          ./gradlew assembleUniversalFossRelease \
+            -Pandroid.injected.applicationId=com.metrolist.music.clone \
+            -Pandroid.injected.resValue.string.app_name="Metrolist Clone" \
+            --no-configuration-cache --console=plain --warning-mode summary
+        env:
+          LASTFM_API_KEY: ${{ secrets.LASTFM_API_KEY }}
+          LASTFM_SECRET: ${{ secrets.LASTFM_SECRET }}
+
+      - name: Sign Clone APK
+        uses: ilharp/sign-android-release@v2.0.0
+        with:
+          releaseDir: app/build/outputs/apk/universalFoss/release/
+          signingKey: ${{ secrets.KEYSTORE }}
+          keyAlias: ${{ secrets.KEY_ALIAS }}
+          keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+          buildToolsVersion: 35.0.0
+
+      - name: Rename and Upload Clone
+        run: |
+          mv app/build/outputs/apk/universalFoss/release/*-signed.apk app/build/outputs/apk/universalFoss/release/Metrolist-Clone.apk
+
+      - name: Upload Clone Artifact
+        uses: actions/upload-artifact@v6
+        with:
+          name: Metrolist-Clone-Universal
+          path: app/build/outputs/apk/universalFoss/release/Metrolist-Clone.apk
